syntax = "proto3"; 
package pb; 
// import "common.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;

message Index {
    double timestamp = 1;
    string ticker = 2;
    double value = 3;
}

message Spot {
    Index index = 1;
}

message RiskFreeRate {
    Index index = 1;
}

message FlatVol {
    Index index = 1;
}

message OptionQuote {
    double timestamp = 1;
    double strike = 8;
    double bid = 9;
    double ask = 10;
    double volume = 11;
    double openinterest = 12;
    string putcall = 13;
}

message OptionQuoteSlice {
    double timestamp = 1;
    double expiry = 2;
    repeated OptionQuote puts = 3;
    repeated OptionQuote calls = 4;    
}

message OptionMarket { 
    double timestamp = 1;
    Spot spot = 2;
    FlatVol vol = 3;
    RiskFreeRate rate = 4;
} 

message ImpliedVolQuote {
    double timestamp = 1;    
    OptionQuote input = 2;    
    string error = 3;
    double vol = 4;
    int64 nbiteration = 5;
}

message ImpliedVolSlice {
    double timestamp = 1;
    bool iserror = 2; 
    double expiry = 3;
    repeated ImpliedVolQuote quotes = 4;
}

message ImpliedVolSurface { 
    double timestamp = 1;
    repeated ImpliedVolSlice slices = 2;
} 